--- a/index.html
+++ b/index.html
@@ -36,8 +36,7 @@
         <canvas id="render"></canvas>
         <div class="qspacer"></div>
         <div style="display: flex; justify-content: space-between; padding-left: 1px; padding-right: 1px;">
-          <div id="rmarker"></div>
-          <div>
+          <div id="rmarker"></div> <div>
             <div id="rgrid"></div>
           </div>
         </div>
@@ -113,6 +112,10 @@
           <div><button>?</button> toggle help</div>
           <div class="hspacer"></div>
         </div>
+        <div class="hspacer"></div>
+        <div><a href="https://constraint.systems">constraint.systems</a></div>
+        <div class="qspacer"></div>
+        <div><a href="https://github.com/constraint-systems/bit">View source</a></div>
      </div>
     </div>
   </body>
